<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgDetalhe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imgcadastro"
        app:srcCompat="@mipmap/SQLite" />

    <TextView
        android:id="@+id/txtDetalhe"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orienta"
        android:text="@string/detalhe_do_produto"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detProduto"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orienta"
        android:hint="@string/nome_do_produto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detQtde"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orienta"
        android:hint="@string/quantidade"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detValor"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orienta"
        android:hint="@string/valor"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detCodigo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orienta"
        android:hint="@string/codigo"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />
</LinearLayout>